@@ -2,6 +2,8 @@ ChangeLog
 
 Upcoming version
 [FEATURE] Show additional fields which are registered by other extensions in "Indexed content" function of the backend module
+[BUGFIX]  Make it possible to have multiple "orderBy" parts in the search result query in TYPO3 13
+[TASK]    Add special treatment for the ke_search_premium "Custom Ranking" feature in the search result query "orderBy" part
 [TASK]    Make it possible to add "having" in the search result query
 
 Version 6.1.2, 15 November 2024
